<resources>
    <string name="app_name">Green house</string>
    <string name="facebook_app_id" translatable="false">1522697517767049</string>
    <string name="CONSUMER_KEY" translatable="false">zhq2TynN0PMa712MWCGLXfUUb</string>
    <string name="CONSUMER_SECRET" translatable="false">zs6Mlwv5VjeptJtiVKZ5AkT7KT3UOjqwW6JgLI8yJCmdZ2eafb</string>
    <string name="format_date_time">MM/dd/yyyy</string>
    <string name="google_maps_key" translatable="false">AIzaSyAkOY2nUdj9dbCVJQAKsPYrqC7Uyz72I1o</string>
    <string name="warning">Warning</string>
    <string name="token_expired">Token Expired</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Please enter a valid email address and try again</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">Field is required</string>
    <string name="register_email">Enter Email</string>
    <string name="register_password">Enter Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_main">Main</string>
    <string name="title_timeline">Timeline</string>
    <string name="login_forgot_pass">Forgot your password</string>
    <string name="title_forgot_pass">Forgot your password?</string>
    <string name="title_des_forgot_pass">To access your account, please enter your email address.</string>
    <string name="title_des_forgot_back">Back To Sign In</string>
    <string name="login_lb_register">Don’t have an account?</string>
    <string name="login_register">Register</string>
    <string name="login_social">OR</string>
    <string name="tutorial_next">→ next</string>
    <string name="btn_dialog_ok">OK</string>
    <string name="message_next_phase">This feature will be implemented in the next phase</string>
    <string name="login_check_email">Check the mail</string>
    <string name="locale_ja">Japanese</string>
    <string name="locale_en">English</string>
    <string name="language_setting">Language setting</string>
    <string name="language_setting_confirm">To apply the new language, App restart is needed. Do you want to restart now?</string>
    <string name="login_send_email_full">We sent a mail to %s.\nTo reset your password, click the link shown in the mail.</string>
    <string name="login_send_email">We sent a mail to</string>
    <string name="login_register_text">. To register, click the link shown in the mail.</string>
    <string name="toolbar_cancel">Cancel</string>
    <string name="toolbar_close">Close</string>
    <string name="toolbar_done">Done</string>
    <string name="account_setting_email">Email</string>
    <string name="account_setting_nickname">Nickname</string>
    <string name="account_setting_lastname">Last Name</string>
    <string name="account_setting_firstname">Full Name</string>
    <string name="account_setting_myweb">My Web</string>
    <string name="account_setting">Account Setting</string>
    <string name="toolbar_save">Save</string>
    <string name="camera_action">Choose Image</string>
    <string name="notification">Notification</string>
    <string name="account_logout">Log out</string>
    <string name="account_logout_confirm">Are you sure you want to log out?</string>
    <string name="notification_detail">Notification Details</string>
    <string name="toolbar_post">Post</string>
    <string name="timeline_work_type">Work Type</string>
    <string name="timeline_target_crop">Target Crop</string>
    <string name="timeline_disease">Disease</string>
    <string name="timeline_pesticide">Pesticide</string>
    <string name="timeline_fertilizer">Fertilizer</string>
    <string name="timeline_date_specification">Date specification</string>
    <string name="search_hint">Search recipe</string>
    <string name="fields_greenhouse">Fields/Greenhouse</string>
    <string name="settings">Settings</string>
    <string name="add_rule">Add Rule</string>
    <string name="add_action">Add Action</string>
    <string name="add_condition">Add Condition</string>
    <string name="button_default">Default</string>
    <string name="button_customized">Customized</string>
    <string name="select_current_stage">Select Current Stage</string>
    <string name="current_stage">Current Stage</string>
    <string name="recipe_selected">Recipe Selected</string>
    <string name="revision_history">Revision History</string>
    <string name="toolbar_send">Send</string>
    <string name="add_stage_string">Stage: </string>
    <string name="clone">Clone</string>
    <string name="cancel">Cancel</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="category">Category</string>
    <string name="crop">Crop</string>
    <string name="prefecture">Prefecture</string>
    <string name="recipe_ver">Recipe Version</string>
    <string name="author">Author</string>
    <string name="overview">Overview</string>
    <string name="scope_of_disclosure">Scope Of Disclosure</string>
    <string name="change_availability">Change Availability</string>
    <string name="growing_stage_information">Growing Stage Information</string>
    <string name="see_revision_history">See Revision History</string>
    <string name="timeline_remote_control">Remote control</string>
    <string name="timeline_diary">Diary</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_day_to">To</string>
    <string name="filter_day_from">From</string>
    <string name="filter_member">Member</string>
    <string name="filter">Filters</string>
    <string name="add_growing_stage">Add Growing Stage</string>
    <string name="growing_stage_name">Growing Stage Name</string>
    <string name="stage_description">Growing Stage Description</string>
    <string name="rules">Rules</string>
    <string name="filter_all">All</string>
    <string name="search">Search</string>
    <string name="settings_ui_account">Account Settings</string>
    <string name="settings_ui_app_setting">Application Settings</string>
    <string name="settings_ui_setting_type">About Application</string>
    <string name="settings_ui_notification">Notification Settings</string>
    <string name="settings_ui_language">Language</string>
    <string name="settings_ui_instructions">Instructions</string>
    <string name="settings_ui_facebook">e-kakashi Facebook</string>
    <string name="settings_ui_term">Term of Service</string>
    <string name="settings_ui_privacy">Privacy Policy</string>
    <string name="settings_ui_logout">Log Out</string>
    <string name="separator">&#32;-&#32;</string>
    <string name="hh_mm">HH:mm</string>
    <string name="post_date_specification">Date Specification</string>
    <string name="post_none">None</string>
    <string name="post_fertilizer">Fertilizer</string>
    <string name="post_target_crop">Target Crop</string>
    <string name="post_work_type">Work Type</string>
    <string name="post_pesticide">Pesticide</string>
    <string name="post_disease">Disease</string>
    <string name="post_workplace">Workplace</string>
    <string name="post_work_description">Work Description</string>
    <string name="toolbar_post_diary">Post Diary</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="post_timeline_hint_description">Type description here</string>
    <string name="post_timeline_hint_disease">Type Disease</string>
    <string name="post_timeline_hint_pesticide">Type Pesticide</string>
    <string name="post_k_potassium">K (Potassium)</string>
    <string name="post_type_k">Enter K</string>
    <string name="post_type_p">Enter P</string>
    <string name="post_p_phosphoric_acid">P (Phosphoric Acid)</string>
    <string name="post_type_n">Enter N</string>
    <string name="post_n_nitrogen">N (Nitrogen)</string>
    <string name="post_other">Other</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="alert">Alert</string>
    <string name="delete_post">Delete Post</string>
    <string name="diary_delete_confirm">Are you sure you want to delete this post ?</string>
    <string name="timeline_post_title">Post Diary</string>
    <string name="loading">Loading</string>
    <string name="message_please_wait">Please waiting.....</string>
    <string name="txt_edit">Edit</string>
    <string name="text_deletesuccess">Delete successfully</string>
    <string name="txt_deletefailed">Delete failed</string>
    <string name="message_dragposition">Drag the position to determine the area</string>
    <string name="toast_success">Success</string>
    <string name="txt_basic_information">Basic Information</string>
    <string name="txt_place_type">Place Type</string>
    <string name="txt_place_name">Place Name</string>
    <string name="txt_data_source">Data Source</string>
    <string name="txt_recipes">Recipes</string>
    <string name="txt_map">Map</string>
    <string name="txt_finish">Finish</string>
    <string name="txt_greenhouse">Greenhouse</string>
    <string name="txt_place_name2">Place Name*</string>
    <string name="txt_hint_enter_field_name">Enter Name for Field/Greenhouse</string>
    <string name="txt_go_to_next_step">Go to next step</string>
    <string name="txt_devices_percent">%d\%</string>
    <string name="txt_members">Members</string>
    <string name="txt_move_the_pin_to_the_position">Move the pin to the position</string>
    <string name="txt_change_position">Change position</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_delete_field">Delete</string>
    <string name="txt_search_location">Search Location</string>
    <string name="txt_determine_the_position">Determine the position</string>
    <string name="txt_determine_the_area">Determine the area</string>
    <string name="txt_linked_devices">Linked devices</string>
    <string name="txt_content_description">contentDescription</string>
    <string name="txt_ventilation_window_open_close_motor">Ventilation window open/close motor</string>
    <string name="txt_status">Status</string>
    <string name="txt_reset_sensor">Reset Sensor</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_done">Done</string>
    <string name="txt_please_enable_internet_and_gps">Please enable internet and Gps</string>
    <string name="time_now">Now</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="time_hours_ago">%d hours ago</string>
    <string name="time_minutes_ago"> %d minutes ago</string>
    <string name="time_hour_ago">%d hour ago</string>
    <string name="time_minute_ago">%d minute ago</string>
    <string name="next_time_hours">next %d hours</string>
    <string name="next_time_minutes">next %d minutes</string>
    <string name="next_time_hour">next %d hour</string>
    <string name="next_time_minute">next %d minute</string>
    <string name="type">Type</string>
    <string name="device_add_device">Add Device</string>
    <string name="device_scan_device">Scan QR Code</string>
    <string name="device_add_id">Enter Device ID Here</string>
    <string name="description">Description</string>
    <string name="txt_cancel">Cancel</string>
    <string name="edit_growing_stage">Edit Growing Stage</string>
    <string name="txt_view_information">View Information</string>
    <string name="txt_field_greenhouse">Field/Greenhouses</string>
    <string name="edit_basic_information">Edit Basic Information</string>
    <string name="edit_widgets">Edit Widgets</string>
    <string name="tv_page1_mid_tutorial">Weather information in the 1 km range, with icons and graphs,Because it is easy to see, even if you are not nearby,</string>
    <string name="tv_page1_top_tutorial">To know now</string>
    <string name="tv_page1_bot_tutorial">Now information can be confirmed with the application!</string>
    <string name="help">Help</string>
</resources>