<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_timeline"
        android:enabled="true"
        android:icon="@drawable/timeline"
        android:title="@string/title_timeline"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/navigation_main"
        android:enabled="true"
        android:icon="@drawable/main"
        android:title="@string/title_main"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_setting"
        android:enabled="true"
        android:icon="@drawable/setting"
        android:title="@string/settings"
        app:showAsAction="always|withText" />

</menu>
