<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvBasicInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:gravity="center"
        android:text="@string/edit_basic_information"
        android:textColor="@color/bg_green_btn"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/tvStage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_below="@+id/tvBasicInfo"
        android:gravity="center"
        android:text="@string/edit_growing_stage"
        android:textColor="@color/bg_green_btn"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/tvWidget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_below="@+id/tvStage"
        android:gravity="center"
        android:text="@string/edit_widgets"
        android:textColor="@color/bg_green_btn"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_below="@+id/tvWidget"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/bg_green_btn"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

</RelativeLayout>