<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main"
        android:visibility="invisible" />

    <ImageView
        android:contentDescription="@string/description"
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_login" />

    <TextView
        android:id="@+id/title_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="60dp"
        android:text="@string/title_forgot_pass"
        android:textColor="@color/tv_black"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/description_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_forgot"
        android:layout_marginEnd="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/title_des_forgot_pass"
        android:textSize="@dimen/text_size_small" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_forgot"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="35dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_green_around"
            android:text="@string/toolbar_send"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal_2" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_back_to_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@android:color/transparent"
        android:text="@string/title_des_forgot_back"
        android:textAllCaps="false"
        android:textColor="@color/text_color_blue"
        android:textSize="@dimen/text_size_small" />
    <Button
        android:id="@+id/btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_back_to_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@android:color/transparent"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textColor="@color/text_color_blue"
        android:textSize="@dimen/text_size_small" />

</RelativeLayout>
