<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvEdit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:gravity="center"
        android:text="@string/txt_edit"
        android:textColor="@color/bg_green_btn"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_below="@+id/tvEdit"
        android:gravity="center"
        android:text="@string/txt_delete"
        android:textColor="@color/bg_red_btn"
        android:textSize="@dimen/text_size_large" />


    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_below="@+id/tvDelete"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/cancel"
        android:textColor="@color/bg_green_btn"
        android:textSize="@dimen/text_size_large" />

</RelativeLayout>