<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvRecipeName"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:textColor="@color/bold_text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1dp"
        android:layout_below="@+id/tvRecipeName"
        android:background="@color/background_line" />

    <TextView
        android:id="@+id/tvClone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_below="@+id/tvRecipeName"
        android:gravity="center"
        android:text="@string/clone"
        android:textColor="@color/bg_green_btn"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_below="@+id/tvClone"
        android:gravity="center"
        android:text="@string/txt_view_information"
        android:textColor="@color/bg_green_btn"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_below="@+id/tvInfo"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/bg_green_btn"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

</RelativeLayout>