<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40dp"
        android:background="@color/color_f6">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:layout_marginStart="@dimen/padding_10dp"
            android:text="@string/txt_cancel"
            android:textColor="@color/textcolor_blue"
            android:textSize="@dimen/tv_size_15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_field_greenhouse"
            android:textColor="@color/tv_color_111111"
            android:textSize="@dimen/tv_size_15sp" />

        <TextView
            android:id="@+id/tvExcute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/padding_10dp"
            android:text="@string/txt_done"
            android:textColor="@color/textcolor_blue"
            android:textSize="@dimen/tv_size_15sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <com.ekakashi.greenhouse.features.view_field.CutomNumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tv_white" />
</LinearLayout>