<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <ImageView
        android:contentDescription="@string/description"
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLoginFacebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp100"
        android:src="@drawable/logo_login" />

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/dp45"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email"
                android:inputType="textPersonName|textNoSuggestions"
                android:lines="1"
                android:textSize="@dimen/text_size_normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:lines="1"
                android:textSize="@dimen/text_size_normal" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/login_forgot_pass"
            android:textColor="@color/text_color_blue"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutLogin"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_green_around"
            android:text="@string/action_sign_in_short"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal_2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/login_lb_register"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/login_register"
                android:textAllCaps="false"
                android:textColor="@color/text_color_blue"
                android:textSize="@dimen/text_size_small"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutRegister"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/lin_or"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="30dp"
                android:layout_height="@dimen/height_1dp"
                android:background="@color/background_divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/login_social" />

            <View
                android:layout_width="30dp"
                android:layout_height="@dimen/height_1dp"
                android:background="@color/background_divider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40dp"
            android:layout_below="@+id/lin_or"
            android:layout_marginTop="@dimen/margin_30dp"
            android:visibility="gone"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/description"
                android:id="@+id/imgFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/login_face" />

            <ImageView
                android:contentDescription="@string/description"
                android:id="@+id/imgTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_15dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginStart="@dimen/margin_15dp"
                app:srcCompat="@drawable/login_twitter" />

            <ImageView
                android:contentDescription="@string/description"
                android:id="@+id/imgGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/login_google" />

        </LinearLayout>
    </RelativeLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnLoginFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>
